--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:usesCleartextTraffic="true">
         <activity android:name=".Contato" />
         <activity android:name=".ListadeConteudos" />
+        <activity android:name=".Sobre" />
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
