--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity android:name=".Contato" />
         <activity android:name=".ListadeConteudos" />
         <activity android:name=".Sobre" />
+        <activity android:name=".ConteudosAdicionais.Heranca" />
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
